--- a/Dag3/Flaskeautomaten/Flaskeautomaten/Flaskeautomaten.csproj
+++ b/Dag3/Flaskeautomaten/Flaskeautomaten/Flaskeautomaten.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7333C55B-DB89-4428-905F-2FFA1A2122C4}</ProjectGuid>
+    <ProjectGuid>{1FF473B5-1137-44C9-A921-081E8932974A}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Dining_philophers</RootNamespace>
-    <AssemblyName>Dining philophers</AssemblyName>
+    <RootNamespace>Flaskeautomaten</RootNamespace>
+    <AssemblyName>Flaskeautomaten</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,10 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Philosopher.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Table.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
