--- a/Dag3/Producer Consumer/Producer Consumer/Producer Consumer.csproj
+++ b/Dag3/Producer Consumer/Producer Consumer/Producer Consumer.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7333C55B-DB89-4428-905F-2FFA1A2122C4}</ProjectGuid>
+    <ProjectGuid>{1D07861F-106C-4EF2-8A6E-E3EBD447E229}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Dining_philophers</RootNamespace>
-    <AssemblyName>Dining philophers</AssemblyName>
+    <RootNamespace>Producer_Consumer</RootNamespace>
+    <AssemblyName>Producer Consumer</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,10 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Philosopher.cs" />
+    <Compile Include="Buffer.cs" />
+    <Compile Include="Consumer.cs" />
+    <Compile Include="Producer.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Table.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
