--- a/Dag3/Flaskeautomaten/Flaskeautomaten/Flaskeautomaten.csproj
+++ b/Dag3/Flaskeautomaten/Flaskeautomaten/Flaskeautomaten.csproj
@@ -43,11 +43,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Drink.cs" />
+    <Compile Include="DrinkBuffers.cs" />
+    <Compile Include="DrinksInfo.cs" />
+    <Compile Include="Producer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
