--- a/Dag4/Bagagesorteringssystem/Bagagesorteringssystem/Bagagesorteringssystem.csproj
+++ b/Dag4/Bagagesorteringssystem/Bagagesorteringssystem/Bagagesorteringssystem.csproj
@@ -43,19 +43,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ControlTower.cs" />
+    <Compile Include="CreateBaggage.cs" />
+    <Compile Include="GatesController.cs" />
     <Compile Include="Gui\ConsoleController.cs" />
     <Compile Include="Gui\DisplayAirportInfo.cs" />
+    <Compile Include="Gui\KeyboardListener.cs" />
     <Compile Include="Objects\Airport.cs" />
     <Compile Include="Objects\Baggage.cs" />
     <Compile Include="Objects\CheckInDesk.cs" />
     <Compile Include="SetUpAirport.cs" />
     <Compile Include="BaggageSplitter.cs" />
-    <Compile Include="CheckInDesks.cs" />
-    <Compile Include="Flight.cs" />
+    <Compile Include="CheckInDesksController.cs" />
+    <Compile Include="Objects\Flight.cs" />
     <Compile Include="Objects\Gate.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SortingSystem.cs" />
+    <Compile Include="TimeStampController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
